apps/jellyfin/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jellyfin
  namespace: media
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  tls:
    - secretName: wildcard-tls
      hosts:
        - home.brettswift.com
  rules:
    - host: home.brettswift.com
      http:
        paths:
          - path: /jellyfin(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: jellyfin
                port:
                  number: 8096
